tai commit